--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,9 +1,9 @@
 #!/bin/bash
 
-# This deploy hook gets executed after dependencies are resolved and the
-# build hook has been run but before the application has been started back
-# up again.  This script gets executed directly, so it could be python, php,
-# ruby, etc.
+# This is a simple build script and will be executed on your CI system if
+# available.  Otherwise it will execute while your application is stopped
+# before the deploy step.  This script gets executed directly, so it
+# could be python, php, ruby, etc.
 
 # Don't forget to "chmod +x .openshift/action_hooks/build"
 
@@ -11,10 +11,3 @@
 #if [ -f ${OPENSHIFT_REPO_DIR}.openshift/config/.htaccess ]; then
 #  cp -f ${OPENSHIFT_REPO_DIR}.openshift/config/.htaccess ${OPENSHIFT_REPO_DIR}web/.htaccess
 #fi
-
-#init yii app
-#composer clear-cache
-#composer global require "fxp/composer-asset-plugin:~1.1.1"
-#cd ${OPENSHIFT_REPO_DIR}
-#php init --env=Production --overwrite=All
-#composer install
